--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,15 @@
   height: 200px;
   background-color: red;
   border-radius: 4px;
-  position:absolute;
+  position: absolute;
   top: 100px;
   left: 100px;
+}
+#pointer {
+  width: 10px;
+  height: 10px;
+  background-color: black;
+  position: absolute;
+  left: 0px;
+  top: -10px;
 }
