--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,21 @@
   left: 0px;
   top: -10px;
 }
+#loop {
+  width: 200px;
+  height: 200px;
+  background-color: blue;
+  border-radius: 4px;
+  position: absolute;
+  top: 100px;
+  left: 350px;
+}
+#circuit {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  border-radius: 4px;
+  position: absolute;
+  top: 100px;
+  left: 600px;
+}
