--- a/visualJS/visualJS_CSS.css
+++ b/visualJS/visualJS_CSS.css
@@ -1,12 +1,14 @@
 .js_block{
     /*This is the class for blockss. Individual changes are
     done with IDs*/
-    display:inline-block;
+    font-family:sans-serif;
+    text-align:center;
+    display:block;
     border:2px solid;
     border-radius: 15px;
     padding: 10px;
     width:150px;
-    height:50px
+    margin-bottom:10px;
 }
 #forLoop{
     background-color: orange;
@@ -14,9 +16,16 @@
 #whileLoop{
     background-color: yellow;
 }
-#if_else{
+#if{
+   background-color: red;
+}
+#else{
     background-color: red;
 }
-function{
+#function{
     background-color: green;
+}
+.moveable{
+    display: default;
+    position: absolute;
 }
