--- a/visualJS/css/visualJS_CSS.css
+++ b/visualJS/css/visualJS_CSS.css
@@ -1,22 +1,27 @@
-.js_block{
+.js_block {
     /*This is the class for blockss. Individual changes are
     done with IDs*/
-    display:inline-block;
-    border:2px solid;
+    display: inline-block;
+    border: 2px solid;
     border-radius: 15px;
     padding: 10px;
-    width:150px;
-    height:50px
+    width: 150px;
 }
-#forLoop{
+#forLoop {
     background-color: orange;
 }
-#whileLoop{
+#whileLoop {
     background-color: yellow;
 }
-#if_else{
+#if{
     background-color: red;
 }
-function{
+#else{
+    background-color: red;
+}
+#function {
     background-color: green;
+}
+.moveable {
+    position: absolute;
 }
