--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,20 @@
 #test {
+  border: 2px solid red;
   background-image: url("../images/resistor.png");
   border-radius: 4px;
   background-size: 200px 100px;
   background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 500px;
+  left: 1000px;
+  z-index: 1000;
+}
+#invisible {
+  width: 277px;
+  height: 137px;
+  border-radius: 4px;
+  background-color: grey;
   position: absolute;
   top: 100px;
   left: 100px;
@@ -25,7 +37,9 @@
   top: -10px;
 }
 #loop {
+  border: 2px solid green;
   background-image: url("../images/vsource.png");
+  background-position: center;
   background-size: 200px 100px;
   background-repeat: no-repeat;
   border-radius: 4px;
@@ -34,9 +48,17 @@
   left: 350px;
 }
 #circuit {
+  border: 2px solid black;
   background-color: green;
   border-radius: 4px;
   position: absolute;
   top: 100px;
   left: 600px;
+}
+#answer {
+  border: 2px solid red;
+  width: 277px;
+  height: 137px;
+  position: absolute;
+  right: 0px;
 }
