--- a/css/home_styles.css
+++ b/css/home_styles.css
@@ -1,19 +1,3 @@
-@font-face {
-  font-family: 'Nova Slim';
-  src: url('fonts/NovaSlim.ttf');
-  font-weight: lighter;
-  font-style: normal;
-}
-#main {
-  font-family: 'Nova Slim';
-  color: #00CED1;
-  position: absolute;
-  left: 400px;
-  font-size: 5em;
-  background: url(../images/leap.png) no-repeat bottom;
-  background-size: 500px 200px;
-  height:233px;
-}
 #start {
   position: absolute;
   top: 250px;
@@ -22,4 +6,6 @@
   font-size: 2em;
   border-radius: 5px;
   background-color: #9400D3;
+  color: white;
 }
+
