--- a/css/circuit.css
+++ b/css/circuit.css
@@ -24,6 +24,22 @@
   position: absolute;
 }
 
+#voltageAnswer, #currentAnswer, #resistanceAnswer, #description {
+  border: 2px solid black;
+  border-radius: 4px;
+  text-align: center;
+  position: absolute;
+}
+
 .answer {
-  color: grey;
+  background-color: grey;
+}
+#next {
+  position: absolute;
+  top: 600px;
+  left: 1000px;
+  font-size: 2.5em;
+  border-radius: 5px;
+  background-color: #5daa00;
+  color: white;
 }
