--- a/css/home_styles.css
+++ b/css/home_styles.css
@@ -5,7 +5,7 @@
   margin: auto;
   font-size: 2em;
   border-radius: 5px;
-  background-color: #9400D3;
+  background-color: #5daa00;
   color: white;
 }
 
