--- a/css/common.css
+++ b/css/common.css
@@ -27,3 +27,25 @@
 .subheader {
   position: relative;
 }
+#invisible {
+  border-radius: 4px;
+  background-color: grey;
+  position: absolute;
+}
+#pointer {
+  width: 10px;
+  height: 10px;
+  background-color: black;
+  opacity: 0;
+  position: absolute;
+  left: 0px;
+  top: -10px;
+}
+#direction {
+  width: 10px;
+  height: 10px;
+  background-color: black;
+  position: absolute;
+  left: 0px;
+  top: -10px;
+}
